# obsidian-mcp-python

./: .env.sample  .gitignore  main.py  pyproject.toml
src/: server.py
src/obsidian_client/: __init__.py  client.py  exceptions.py  models.py
src/obsidian_mcp/: client.py
src/utils/: __init__.py  errors.py  id_generator.py  logging.py  rate_limiting.py  tokenization.py  validation.py
